# nfl-big-data-bowl-2026

./: .gitignore  .mypy.ini  .ruff.toml  LICENSE  README.md  pyproject.toml
data/models/: model.yaml
nfl2026/: cli_utils.py  geometry.py  io.py  lightning_cli.py  tensor_utils.py
nfl2026/data/: dataclass.py  datamodule.py  dataset.py  external_dataset.py  feature_builder.py
nfl2026/model/: __init__.py  attention.py  attention_rpe.py  decoder.py  edge_connector.py  edge_selector.py  embeddings.py  encoder.py  flattener.py  graph_builder.py  loss.py  metric.py  recorder.py  weight_init.py
